--- a/page.html
+++ b/page.html
@@ -18,7 +18,48 @@
     </div>
     <h2>Que bom que veio aqui</h2>
     <span>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur harum corrupti delectus aspernatur. Provident, voluptas inventore placeat magni pariatur quibusdam numquam, totam cum, ipsam consectetur tempora nisi laboriosam. Non, explicabo.
+        Como brisa suave ao entardecer,
+assim foste tu naquele ônibus de ferro e tormento —
+teus olhos, ainda ocultos, já me chamavam em silêncio.
+
+Não sabia eu, naquele dia de novembro,
+que em meio ao desconforto brotava uma promessa.
+E como a videira que floresce após o inverno,
+brotou em mim o pressentimento de que tu serias jardim em minha alma.
+
+Conversamos, e os campos do nosso coração se encontraram.
+Tuas palavras eram como mel nos lábios,
+e teu riso — ah, teu riso! — mais doce que vinho novo.
+Nos reconhecemos em meio às palavras,
+e por um instante fomos um só perfume derramado.
+
+Mas eis que veio o tempo da dor,
+e fevereiro, como lâmina afiada, separou o que era uno.
+Meu peito sangra ainda, como terra seca que clama pela chuva.
+Tornei-me louco por tua ausência,
+e cada lembrança é espinho que me fere ao tocar.
+
+Mas volto agora como servo à sua senhora,
+não para mendigar o que passou,
+mas para oferecer novo azeite,
+nova chance, novo amor — se me permitires.
+
+Dizem-me os amigos:
+"Ele é tolo! Louco! Cego de amor!"
+E talvez o sejam sábios em suas razões,
+mas meu coração recusa-se a esquecer tua formosura,
+e minha alma, insensata, deseja tua presença mais que o ouro de Ofir.
+
+Oh, filha do Altíssimo,
+não me rejeites outra vez,
+não deixes que tuas palavras se tornem espadas contra mim,
+mas que sejam como lençóis de linho fino,
+envolvendo este amor renascido.
+
+Pois se és, de fato, a mulher mais sábia e bela —
+depois da minha mãe, claro —
+então deixa-me provar novamente do teu vinho,
+e que possa um dia caminhar contigo entre os lírios.
     </span>
     <h1 class="love">Te Amo bem Muitão</h1>
 </body>
