--- a/page.html
+++ b/page.html
@@ -20,8 +20,9 @@
     <span>
 
         Como brisa suave ao entardecer,<br>
-        assim foste tu naquele ônibus de ferro e tormento —<br>
+        assim foste tu naquele evento de muitos rostos e barulhos —<br>
         teus olhos, ainda ocultos, já me chamavam em silêncio.<br><br>
+        
       
         Não sabia eu, naquele dia de novembro,<br>
         que em meio ao desconforto brotava uma promessa.<br>
@@ -60,7 +61,7 @@
         Pois se és, de fato, a mulher mais sábia e bela —<br>
         depois da minha mãe, claro —<br>
         então deixa-me provar novamente do teu vinho,<br>
-        e caminhar contigo entre os lírios.
+        e que algum dia possa caminhar contigo entre os lírios.
     </span>
     <h1 class="love">Te Amo bem Muitão</h1>
 </body>
